[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webtoon-automation-app"
version = "0.1.0"
description = "Prototype GUI for webtoon text bubble workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
